test/sema/copyable-struct-mutate-in-nonmutating-func.delta
// RUN: not %delta -typecheck %s | %FileCheck %s

struct A: Copyable {
    var s: int

    func a() {
        // CHECK: 8:10: error: cannot increment immutable value
        s++
    }
}
